config/modules/vpx/resources.tf
resource "aws_security_group" "client_sg" {
    name = "client_sg"
    ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
      from_port = 443
      to_port = 443
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
       from_port = 0
       to_port = 0
       protocol = "-1"
       cidr_blocks = ["0.0.0.0/0"]
    }
    vpc_id = "${var.vpc_id}"
}


resource "aws_iam_instance_profile" "CitrixNodesProfile" {
    name_prefix = "CitrixNodesProfile"
    roles = ["${aws_iam_role.CitrixNodesInstanceRole.name}"]
}

resource "aws_iam_role" "CitrixNodesInstanceRole" {
    name_prefix = "CitrixNodesInstanceRole"
    path = "/"
    assume_role_policy = <<EOF
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Action": "sts:AssumeRole",
            "Principal": {
               "Service": "ec2.amazonaws.com"
            },
            "Effect": "Allow",
            "Sid": ""
        }
    ]
}
EOF
}

resource "aws_iam_role_policy" "Citrixnode" {
    name = "Citrixnode"
    role = "${aws_iam_role.CitrixNodesInstanceRole.id}"
    policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": [
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DetachNetworkInterface",
        "ec2:AttachNetworkInterface"
      ],
      "Effect": "Allow",
      "Resource": "*"
    }
  ]
}
EOF
}
